[metadata]
name = django-flag-app
version = 1.1.1
author = Abhyudai
author_email =
description = A pluggable django application that adds the ability for users to flag(or report) your models
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/abhiabhi94/django-flag-app
license = MIT
license_file = LICENSE
project_urls =
    Documentation=https://django-flag-app.readthedocs.io
    Source Code=https://github.com/abhiabhi94/django-flag-app
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
keywords = django flag report moderate

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires = django
zip_safe = False

[options.packages.find]
exclude =
    docs
    test*

[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs
extend-ignore =
    E203, E231,

[isort]
known_third_party = django, rest_framework

[coverage:run]
branch = true
source =
    flag

[coverage:report]
show_missing = true
skip_covered = true

[tool:pytest]
django_find_project = false
addopts = -p no:doctest
    --ds=testapp.settings.test

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html
